# my-assistant

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  audio_input.h  audio_input_alsa.cc  audio_input_alsa.h  audio_output_alsa.cc  audio_output_alsa.h  base64_encode.cc  run_assistant_audio.cc  run_assistant_text.cc
src/proto/: CMakeLists.txt  embedded_assistant.proto
